Fix: top value, z-index value and position value

--- a/CSS_advanced/styles/31-style.css
+++ b/CSS_advanced/styles/31-style.css
@@ -677,7 +677,7 @@ ul.row {
     opacity: 1;
 }
 .card-testimonial .card-quote {
-    position: absolute;
+    position: relative;
 }
 .card-testimonial .card-quote::before {
     content: "\201C";
@@ -686,5 +686,5 @@ ul.row {
     left: -1rem;
     color: #efeded;
     font-size: 10rem;
-    z-index: 1;
+    z-index: -1;
 }
